Add submit handler
